--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
   -->
 <!--<script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUs7ZDeH9ry8sa0YMS1IYyxA8uPJwSFXk&callback=initMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUs7ZDeH9ry8sa0YMS1IYyxA8uPJwSFXk&callback=initMap" async defer ></script>
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
@@ -43,8 +43,17 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     resume below. You can pretty easily figure out what each section will
     display by looking at the id or at what's written between the <h2> tags.
     -->
+    <div id="navbar">
+    <ul class="nav nav-tabs flex-box ">
+          <li role="presentation" class="flex-item"><a href="#workExperience">Work Experience</a></li>
+          <li role="presentation" class="flex-item "><a href="#projects">Projects</a></li>
+          <li role="presentation" class="flex-item "><a href="#education">Education</a></li>
+          <li role="presentation" class="flex-item "><a href="#mapDiv">Where I've Lived and Worked</a></li>
+    </ul>
+    </div>
     <div id="header" class="center-content clear-fix">
-      <ul id="topContacts" class="flex-box"></ul>
+      <ul id="topContacts" class="flex-box">
+      </ul>
     </div>
     <div style="clear: both;"></div>
     <div id="workExperience" class="gray">
@@ -69,7 +78,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <!-- "HTML is loaded by the browser in the order it appears in the file. If the JavaScript is loaded first and it is supposed to affect the HTML below it, it might not work, as the JavaScript would be loaded before the HTML it is supposed to work on. Therefore, putting JavaScript near the bottom of the HTML page is often the best strategy."
   https://developer.mozilla.org/en-US/Learn/Getting_started_with_the_web/JavaScript_basics -->
 
-   <!-- "Javascript assets, by default, tend to block any other parallel downloads from occurring. So, you can imagine if you have plenty of <script> tags in the head, calling on multiple external scripts will block the HTML from loading, thus greeting the user with a blank white screen, because no other content on your page will load until the JS files have completely loaded."
+  <!-- "Javascript assets, by default, tend to block any other parallel downloads from occurring. So, you can imagine if you have plenty of <script> tags in the head, calling on multiple external scripts will block the HTML from loading, thus greeting the user with a blank white screen, because no other content on your page will load until the JS files have completely loaded."
     http://stackoverflow.com/questions/4396849/does-the-script-tag-position-in-html-affects-performance-of-the-webpage -->
 
     <!--
