--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
   -->
 <!--<script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUs7ZDeH9ry8sa0YMS1IYyxA8uPJwSFXk&callback=initMap" async defer ></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUs7ZDeH9ry8sa0YMS1IYyxA8uPJwSFXk&libraries=places"
+  async defer></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
